--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: 'Playfair Display', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: rgb(100, 100, 100);
   color: rgb(255, 255, 255);
 }
